# LinaGX

./: .gitignore  CMakeLists.txt  LICENSE  LinaGX.sln.licenseheader  README.md
CMake/: CopyResources.cmake  ExampleProjectSettings.cmake  MacOSXBundleInfo.plist  ProjectSettings.cmake  ProjectStructure.cmake
Dependencies/: Dependencies.cmake
Dependencies/SPIRV-Cross/: CMakeLists.txt
Dependencies/SPIRV-Cross-MoltenVK-1.1.5/: CMakeLists.txt
Dependencies/dxc/: link.cmake
Dependencies/glslang-12.2.0/: CMakeLists.txt
Dependencies/glslang-12.2.0/OGLCompilersDLL/: CMakeLists.txt
Dependencies/glslang-12.2.0/SPIRV/: CMakeLists.txt
Dependencies/glslang-12.2.0/glslang/: CMakeLists.txt
Dependencies/glslang-12.2.0/hlsl/: CMakeLists.txt
Dependencies/metal-cpp-macos12/: CMakeLists.txt
Dependencies/metal-cpp-macos12/metal-cpp/SingleHeader/: Metal.hpp
Dependencies/nvapi/: link.cmake
Dependencies/pix/: link.cmake
Examples/00-WindowCreation/: CMakeLists.txt
Examples/00-WindowCreation/include/: WindowCreation.hpp
Examples/00-WindowCreation/src/: Main.cpp  Main.mm  WindowCreation.cpp
Examples/01-Triangle/: CMakeLists.txt
Examples/01-Triangle/include/: Main.hpp  Triangle.hpp
Examples/01-Triangle/src/: Example.cpp  Main.cpp  Main.mm  Triangle.cpp
Examples/02-TexturesAndBinding/: CMakeLists.txt
Examples/02-TexturesAndBinding/include/: TexturesAndBinding.hpp
Examples/02-TexturesAndBinding/src/: Main.cpp  Main.mm  TexturesAndBinding.cpp
Examples/02-VertexBuffers/: CMakeLists.txt
Examples/02-VertexBuffers/src/: Example.cpp  Main.cpp  VertexBuffers.cpp
Examples/02-VertexIndexBuffers/: CMakeLists.txt
Examples/02-VertexIndexBuffers/src/: Main.cpp  Main.mm  VertexIndexBuffers.cpp
Examples/03-RenderTargetsGLTF/: CMakeLists.txt
Examples/03-RenderTargetsGLTF/include/: Main.hpp  RenderTargetsGLTF.hpp
Examples/03-RenderTargetsGLTF/src/: Main.cpp  Main.mm  RenderTargetsGLTF.cpp
Examples/03-Textures/: CMakeLists.txt
Examples/03-Textures/src/: Main.cpp  Main.mm  Textures.cpp
Examples/04-BindlessIndirectComputeQueue/: CMakeLists.txt
Examples/04-BindlessIndirectComputeQueue/include/: BindlessIndirectComputeQueue.hpp
Examples/04-BindlessIndirectComputeQueue/src/: BindlessIndirectComputeQueue.cpp  Main.cpp  Main.mm
Examples/04-Mipmaps/: CMakeLists.txt
Examples/04-Mipmaps/include/: Mipmaps.hpp
Examples/04-Mipmaps/src/: Main.cpp  Mipmaps.cpp
Examples/05-FoxLounge/: CMakeLists.txt
Examples/05-FoxLounge/include/: FoxLounge.hpp  Utility.hpp
Examples/05-FoxLounge/src/: FoxLounge.cpp  Main.cpp  Main.mm  Utility.cpp
Examples/05-UBO/: CMakeLists.txt
Examples/05-UBO/src/: Main.cpp  Main.mm  UBO.cpp
Examples/06-Constants/: CMakeLists.txt
Examples/06-Constants/src/: Constants.cpp  Main.cpp  Main.mm
Examples/07-SSBO/: CMakeLists.txt
Examples/07-SSBO/src/: Main.cpp  Main.mm  SSBO.cpp
Examples/08-GLTF/: CMakeLists.txt
Examples/08-GLTF/src/: GLTF.cpp  Main.cpp  Main.mm
Examples/09-GLTFSkinning/: CMakeLists.txt
Examples/09-GLTFSkinning/include/: Main.hpp
Examples/09-GLTFSkinning/src/: GLTFSkinning.cpp  Main.mm
Examples/10-RenderTarget/: CMakeLists.txt
Examples/10-RenderTarget/Resources/Shaders/: frag.glsl  quad_vert.glsl  vert.glsl
Examples/10-RenderTarget/include/: RenderTarget.hpp
Examples/10-RenderTarget/src/: Main.cpp  RenderTarget.cpp
Examples/11-SimpleLighting/: CMakeLists.txt
Examples/11-SimpleLighting/src/: Main.cpp  SimpleLighting.cpp
Examples/11-Sponza/: CMakeLists.txt
Examples/11-Sponza/src/: Main.cpp  Main.mm  Sponza.cpp
Examples/12-SponzaPBR/: CMakeLists.txt
Examples/12-SponzaPBR/src/: Main.cpp  Main.mm  SponzaPBR.cpp
Examples/13-Bindless/: CMakeLists.txt
Examples/13-Bindless/src/: Bindless.cpp  Main.cpp  Main.mm
Examples/14-CPUVisibleGPUMemory/: CMakeLists.txt
Examples/14-IndirectRendering/: CMakeLists.txt
Examples/14-IndirectRendering/src/: IndirectRendering.cpp  Main.cpp  Main.mm
Examples/15-CPUVisibleGPUMemory/: CMakeLists.txt
Examples/15-CPUVisibleGPUMemory/src/: CPUVisibleGPUMemory.cpp
Examples/15-IndirectRendering/: CMakeLists.txt
Examples/15-IndirectRenderingCompute/: CMakeLists.txt
Examples/15-IndirectRenderingCompute/src/: IndirectRenderingCompute.cpp  Main.cpp  Main.mm
Examples/16-IndirectRenderingComputeQueue/: CMakeLists.txt
Examples/16-IndirectRenderingComputeQueue/include/: IndirectRenderingComputeQueue.hpp
Examples/16-IndirectRenderingComputeQueue/src/: IndirectRenderingComputeQueue.cpp  Main.cpp
Examples/17-CPUVisibleGPUMemory/: CMakeLists.txt
Examples/17-CPUVisibleGPUMemory/src/: CPUVisibleGPUMemory.cpp  Main.cpp
Examples/FoxLounge/: CMakeLists.txt
Examples/FoxLounge/include/: FoxLounge.hpp  ThreadPool.hpp  Utility.hpp
Examples/FoxLounge/src/: Main.cpp  (+3 more)
Examples/HDR_Later/: CMakeLists.txt
Examples/Introduction/: CMakeLists.txt
Examples/_Common/: CMakeLists.txt
Examples/_Common/Dependencies/glm-0.9.9.8/cmake/glm/: glmConfig.cmake
Examples/_Common/_Vendor/glm/: link.cmake
Examples/_Common/include/: App.hpp  Camera.hpp  ThreadPool.hpp  WindowManager.hpp
Examples/_Common/src/: App.cpp  App.mm  Camera.cpp  ThreadPool.cpp  WindowManager.cpp
Resources/Shaders/: vert.glsl
_Vendor/dxc/: link.cmake  version.txt
_Vendor/glslang/: link.cmake  version.txt
_Vendor/nvapi/: link.cmake
_Vendor/spirv-cross/: link.cmake  version.txt
include/: LinaGX.hpp  LinaGXExports.hpp
include/Common/: Common.hpp  CommonData.hpp  CommonGfx.hpp  Math.hpp
include/Core/: Backend.hpp  CommandStream.hpp  Commands.hpp  DataStructures.hpp  Renderer.hpp  WindowManager.hpp
include/LinaGX/: LinaGX.hpp  LinaGXExports.hpp
include/Utility/: ImageUtility.hpp  MathUtility.hpp  ModelUtility.hpp  PlatformUtility.hpp  SPIRVUtility.hpp
src/: LinaGX.cpp
src/Common/: Common.cpp  CommonConfig.cpp  CommonData.cpp  CommonGfx.cpp  Math.cpp
src/Core/: Backend.cpp  CommandStream.cpp  Commands.cpp  DataStructures.cpp  Input.cpp  Instance.cpp  Renderer.cpp  WindowManager.cpp
src/Utility/: ImageUtility.cpp  MathUtility.cpp  ModelUtility.cpp  PlatformUtility.cpp  SPIRVUtility.cpp
(+167 files in other folders)
